--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb-es5": "^1.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^3.1.0",
     "qunit": "^2.6.1"
   },
   "scripts": {
+    "lint": "eslint coords.js test/",
     "test": "qunit"
   },
   "keywords": [
